--- a/test/form.html
+++ b/test/form.html
@@ -372,7 +372,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
-<script src="../form-validator/jquery.form-validator.min.js"></script>
+<script src="../form-validator/jquery.form-validator.js"></script>
 <script>
 (function($, window) {
     // setup datepicker
