--- a/test/qunit.html
+++ b/test/qunit.html
@@ -13,7 +13,7 @@
 
 <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
-<script src="../form-validator/jquery.form-validator.min.js"></script>
+<script src="../form-validator/jquery.form-validator.js"></script>
 <script src="../node_modules/numeral/numeral.js"></script>
 <script>
 (function($) {
