Load poland module in qunit

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -991,7 +991,7 @@
     }
 
     $.validate({
-        modules : 'security, location, sweden, file, date, sanitize, uk',
+        modules : 'security, location, sweden, file, date, sanitize, uk, poland',
         onModulesLoaded: function( $form ) {
             if( window.console && window.console.log )
                 console.log('About to run all tests');
