fixed test case

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -974,7 +974,7 @@
                 {val:'21115383251129', isValid:true},
                 {val:'05768114548441', isValid:true},
                 {val:'71291247784457', isValid:true},
-                {val:'87244008641050', isValid:true},
+                {val:'87244008641050', isValid:false},
                 {val:'8724400864105', isValid:false},
                 {val:'010218305', isValid:false},
                 {val:'773645358', isValid:false}
