--- a/test/toggle-disabled.html
+++ b/test/toggle-disabled.html
@@ -40,7 +40,7 @@
 </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="../form-validator/jquery.form-validator.min.js"></script>
+  <script src="../form-validator/jquery.form-validator.js"></script>
   <script>
 
     $.validate({
