--- a/test/logic.html
+++ b/test/logic.html
@@ -45,9 +45,9 @@
         <input class="form-control"
                type="text"
                name="state"
-               data-validation="federatestate"
+               data-validation="required"
                data-validation-depends-on="country"
-               data-validation-depends-on-value="Usa"
+               data-validation-depends-on-value="usa, canada"
               />
       </div>
 
@@ -105,7 +105,6 @@
       },
       onModulesLoaded: function() {
         $('input[name="country"]').suggestCountry();
-        $('input[name="state"]').suggestState();
       }
     });
 
