Corrected markup in test form

--- a/test/form.html
+++ b/test/form.html
@@ -171,10 +171,9 @@
                    data-validation-help="Images only"
                    data-validation-allowing="jpg, png, ico"
                    data-validation-dimension="100-800"
-                   data-validation-ratio="8:10-12:10"
                    data-validation-max-size="400kb"
                    data-validation-error-msg-size="The file cant be larger than 400kb"
-                   data-validation-error-msg-ratio="The image dimensions has to be from 8:10-12:10"
+                   data-validation-error-msg-dimension="The image cant be smaller than 100x100 pixels and not larger than 800x800 pixels"
                    data-validation-error-msg="You must upload an image file (jpg,png or ico, max 400 kb)"
             />
         </div>
