--- a/test/qunit.html
+++ b/test/qunit.html
@@ -861,10 +861,10 @@
                     }
                 },
                 strip: {
-                    val: '$tes@ti$ng@$',
-                    expected: 'testing',
+                    val: '5$tes6@ti$ng@99$',
+                    expected: 'testing99',
                     attr: {
-                        'data-sanitize-strip' : '$, @'
+                        'data-sanitize-strip' : '$, @, 5, 6'
                     }
                 },
                 escape: {
