#567 Putting Åland in the back of the country list + various fixes in test dir

--- a/test/form.html
+++ b/test/form.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label" for="country-suggestions">Swedish county suggestions</label>
+            <label class="control-label">Swedish county suggestions</label>
             <div>
                 <div>
                     <!-- Make sure error class "has-error" gets all the way up to .form-group -->
@@ -83,7 +83,7 @@
                    data-validation="length date"
                    data-validation-length="min5"
                    data-validation-format="yyyy/mm/dd"
-                   data-suggestions="2014/01/15,2014/01/16,2014/01/17" />
+                   data-suggestions="2014/01/15,  2014/01/16,2014/01/17" />
         </div>
 
         <div class="form-group">
