--- a/test/logic.html
+++ b/test/logic.html
@@ -35,6 +35,7 @@
                type="text"
                name="country"
                data-validation="country"
+               data-validation-optional="true"
                data-validation-error-msg="You have to answer with a country"
                autocomplete="off"
               />
@@ -47,7 +48,7 @@
                name="state"
                data-validation="required"
                data-validation-depends-on="country"
-               data-validation-depends-on-value="usa, canada"
+               data-validation-depends-on-value="United states, canada"
               />
       </div>
 
