--- a/test/qunit.html
+++ b/test/qunit.html
@@ -1168,6 +1168,38 @@
           });
         });
 
+      test("Color Rgba validation", function() {
+
+        clearForm();
+
+        var links = [
+          {val: 'rgba(255,255,255,1)', isValid: true},
+          {val: 'rgba( 255 , 255 , 255 , 1 )', isValid: true},
+          {val: 'rgba( 255 , 255 , 255 , 1 )', isValid: true},
+          {val: 'rgba(255,255,255,1)', isValid: true},
+          {val: 'rgba(255,255,255,0)', isValid: true},
+          {val: 'rgba(255,255,255,1)', isValid: true},
+          {val: 'rgba(255,255,255,0.5)', isValid: true},
+          {val: 'rgba(255,255,255,.5)', isValid: true},
+          {val: 'rgba(255,255,255,.524141)', isValid: true},
+          {val: 'rgba(255,255,255,2)', isValid: false},
+          {val: 'rgba(255,255,255,-1)', isValid: false},
+          {val: 'rgba(255,255,255,1.000000000001)', isValid: false},
+          {val: 'rgba(255,255,255,-0.5)', isValid: false},
+          {val: 'rgba(255,255,255,2.3)', isValid: false},
+          {val: 'rgba(-10,255,255,1)', isValid: false},
+          {val: '2552552551', isValid: false},
+          {val: 'rgba(255,255,256),1', isValid: false},
+          {val: '0000FF', isValid: false},
+          {val: input('transparent', {'allow-transparent': 'true'}), isValid: true},
+          {val: 'transparent', isValid: false}
+        ];
+
+        $.each(links, function(i, obj) {
+          runTest(obj, 'rgba');
+        });
+      });
+
         // TODO: Write more tests...
     }
 
